Changes to api specification and handling of consecutive run instructions
